--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "get-pixels": "^3.3.3",
+    "quantize": "^1.0.2"
+  }
 }
